# claim-layer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  guarantees.md
examples/: quickstart.py
src/claim_layer/: __init__.py  models.py  store.py
src/claim_layer/api/: __init__.py  query.py
src/claim_layer/semantic/: __init__.py  embeddings.py  hybrid.py  index.py  normalization.py  search.py  truth.py  weighting.py
src/claimlayer/: __init__.py  api.py
src/claimlayer/embeddings/: __init__.py  base.py  default.py  simple.py
tests/: test_semantic.py  test_store.py
tests/invariants/: conftest.py  test_system_guarantees.py
