[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-layer"
version = "0.1.0"
description = "Reusable Evidence Intelligence core from Claim Layer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
  {name = "Deltoryx"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
