[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-layer"
version = "0.3.0"
description = "Compute truth from evidence, not text"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
  {name = "Deltoryx"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
